Add few meta tags for SEO

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,21 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>BHHB</title>
+  <link rel="canonical" href="https://adityatelange.github.io/bhhb/">
   <base href="/">
+
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="translucent">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="description" content="A tool to browse/view exported HTTP history from Burp">
+  <meta name="keywords" content="burp, http, http history, viewer, browser, open source">
+  <meta name="author" content="Aditya Telange">
+
   <link rel="icon" href="favicon.ico" sizes="any">
   <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
   <link rel="manifest" href="manifest.json">
@@ -13,8 +24,10 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="theme-color" content="#0a0a0a">
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
+
 </html>
