Manager lil bit of space

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>BHHB</title>
+  <title>BHHB - Burp HTTP history browser</title>
   <link rel="canonical" href="https://adityatelange.github.io/bhhb/">
   <base href="/">
 
