feat: Update meta tags for social sharing
This commit updates the meta tags in the index.html file to include opengraph and Twitter meta tags for better social sharing. The description, title, and image properties have been updated to provide accurate information when sharing the website on social media platforms.

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,24 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="translucent">
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="description" content="A tool to browse/view exported HTTP history from Burp">
+  <meta name="description" content="A tool to browse/view exported HTTP history from Burp Suite Community Edition">
   <meta name="keywords" content="burp, http, http history, viewer, browser, open source">
   <meta name="author" content="Aditya Telange">
+
+  <!-- Opengraph Meta Tags -->
+  <meta property="og:url" content="https://adityatelange.github.io/bhhb/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="bhhb - Burp HTTP history browser">
+  <meta property="og:description" content="A tool to browse/view exported HTTP history from Burp Suite Community Edition">
+  <meta property="og:image" content="assets/bhhb-social.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="adityatelange.github.io">
+  <meta property="twitter:url" content="https://adityatelange.github.io/bhhb/">
+  <meta name="twitter:title" content="bhhb - Burp HTTP history browser">
+  <meta name="twitter:description" content="A tool to browse/view exported HTTP history from Burp Suite Community Edition">
+  <meta name="twitter:image" content="assets/bhhb-social.png">
 
   <link rel="icon" href="favicon.ico" sizes="any">
   <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
