--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="bhhb - Burp HTTP history browser">
   <meta property="og:description" content="A tool to browse/view exported HTTP history from Burp Suite Community Edition">
-  <meta property="og:image" content="assets/bhhb-social.png">
+  <meta property="og:image" content="https://adityatelange.github.io/bhhb/assets/bhhb-social.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -29,7 +29,7 @@
   <meta property="twitter:url" content="https://adityatelange.github.io/bhhb/">
   <meta name="twitter:title" content="bhhb - Burp HTTP history browser">
   <meta name="twitter:description" content="A tool to browse/view exported HTTP history from Burp Suite Community Edition">
-  <meta name="twitter:image" content="assets/bhhb-social.png">
+  <meta name="twitter:image" content="https://adityatelange.github.io/bhhb/assets/bhhb-social.png">
 
   <link rel="icon" href="favicon.ico" sizes="any">
   <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
